Add steps section - 1 step

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>UXirl.pl</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -29,7 +29,7 @@
                             </a>
                             <a href="#" class="menuLink">
                                 <button class="primaryButton">
-                                    <img class="buttonIcon" src="images/buttonIcon.svg" />
+                                    <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
                                     Wykonaj test UX
                                 </button>
                             </a>
@@ -41,7 +41,7 @@
                 <div class="container">
                     <div class="heroContent">
                         <h1 class="heading">Przeprowadź testy
-                        <span class="withDecoration"><span>z prawdziwymi</span><img src="images/textDecoration.svg" /></span>
+                        <span class="withDecoration"><span>z prawdziwymi</span><img src="images/textDecoration.svg" alt="" /></span>
                         użytkownikami.</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a tristique lorem, non ornare est. Cras feugiat ante id orci
                         gravida, eget consequat leo sagittis.</p>
@@ -81,7 +81,7 @@
                         <img src="images/documents.svg" alt="documents">
                     </div>
                     <div class="profitsTiles">
-                        <div class="profitTile profitTile-active">
+                        <div class="profitTile decorativeWrapper">
                             <div class="mainInfo">
                                 <div class="leftSide">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +121,7 @@
                                 imperdiet molestie turpis sapien
                                 elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</div>
                         </div>
-                        <div class="profitTile">
+                        <div class="profitTile decorativeWrapper">
                             <div class="mainInfo">
                                 <div class="leftSide">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,7 +162,7 @@
                                 elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
 
                         </div>
-                        <div class="profitTile">
+                        <div class="profitTile decorativeWrapper">
                             <div class="mainInfo">
                                 <div class="leftSide">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -205,6 +205,98 @@
                                 elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="steps">
+            <div class="smallContainer decorativeWrapper" id="step-1">
+                <div class="headingWrapper">
+                    <h1 class="heading">Wykonaj test UX
+                    <span class="withDecoration"><span>w 3 krokach</span><img src="images/textDecoration.svg" alt="" /></span></h1>
+                </div>
+                <div class="stepsIndicators">
+                    <div class="stepIndicator active">
+                        <div class="stepIndicatorDot">
+                            <div class="dotDecoration"></div>
+                            <div class="dotWrapper">
+                                <span>1</span>
+                            </div>
+                        </div>
+                        <div class="stepLabelWrapper">
+                            <p class="stepLabel">Wybierz ilość badaczy UX.</p>
+                        </div>
+                        <p class="showStep">Rozwiń...</p>
+                        <img src="images/arrowRight.svg" alt="">
+                    </div>
+                    <div class="stepIndicator">
+                        <div class="stepIndicatorDot">
+                            <div class="dotDecoration"></div>
+                            <div class="dotWrapper">
+                                <span>2</span>
+                            </div>
+                        </div>
+                        <div class="stepLabelWrapper">
+                            <p class="stepLabel">Wgraj projekt lub podaj adres URL.</p>
+                        </div>
+                        <p class="showStep">Rozwiń...</p>
+                        <img src="images/arrowRight.svg" alt="">
+                    </div>
+                    <div class="stepIndicator">
+                        <div class="stepIndicatorDot">
+                            <div class="dotDecoration"></div>
+                            <div class="dotWrapper">
+                                <span>3</span>
+                            </div>
+                        </div>
+                        <div class="stepLabelWrapper">
+                            <p class="stepLabel">Opisz czego dotyczy zadanie.</p>
+                        </div>
+                        <p class="showStep">Rozwiń...</p>
+                        <img src="images/arrowRight.svg" alt="">
+                    </div>
+                    <div class="stepIndicator">
+                        <div class="stepIndicatorDot">
+                            <div class="dotDecoration"></div>
+                            <div class="dotWrapper">
+                                <span>4</span>
+                            </div>
+                        </div>
+                        <div class="stepLabelWrapper">
+                            <p class="stepLabel">Sprawdzimy poprawność testu.</p>
+                        </div>
+                        <p class="showStep">Rozwiń...</p>
+                        <img src="images/arrowRight.svg" alt="">
+                    </div>
+                    <div class="stepIndicator">
+                        <div class="stepIndicatorDot">
+                            <div class="dotDecoration"></div>
+                            <div class="dotWrapper">
+                                <span>5</span>
+                            </div>
+                        </div>
+                        <div class="stepLabelWrapper">
+                            <p class="stepLabel">Wyślij test UX do badaczy.</p>
+                        </div>
+                        <p class="showStep">Rozwiń...</p>
+                    </div>
+                </div>
+                <p class="stepMainText"><span>Krok 1.</span> Wybierz ilość badaczy UX.</p>
+                <div class="sliderNumbers">
+                    <p class="sliderNumber">0</p>
+                    <p class="sliderNumber">5</p>
+                    <p class="sliderNumber">10</p>
+                </div>
+                <div class="sliderWrapper">
+                    <input class="slider" type="range" value="5" min="0" max="10" oninput="rangevalue.value=value" />
+                    <output class="sliderOutput" id="rangevalue">5</output>
+                </div>
+                <p class="stepMainText">Koszt badania:</p>
+                <p class="price"></p>
+                <div class="buttonWrapper">
+                    <button class="primaryButton">
+                        <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
+                        Wykonaj test UX
+                    </button>
                 </div>
             </div>
         </section>
