Add whyRealUsers section

--- a/index.html
+++ b/index.html
@@ -300,6 +300,42 @@
                 </div>
             </div>
         </section>
+        <section class="whyRealUsers">
+            <div class="smallContainer">
+                <h1 class="heading">Dlaczego testy z prawdziwymi użytkownikami?</h1>
+                <div class="advantageTile decorativeWrapper">
+                    <h4 class="advantageTitle">Wczesne wykrywanie błędów
+                    <span class="withDecoration"><span>przed wdrożeniem.</span><img src="images/textDecoration.svg" alt="" /></span></h4>
+                    <p class="advantageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper massa pulvinar non cursus odio viverra non, sapien, sed.</p>
+                    <img src="images/clock.svg" class="clockImage" alt="">
+                </div>
+                <div class="advantageTile decorativeWrapper">
+                    <h4 class="advantageTitle">Spojrzenie z perspektywy
+                    <span class="withDecoration"><span>użytkownika nie liczb.</span><img src="images/textDecoration.svg" alt="" /></span></h4>
+                    <p class="advantageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper massa pulvinar non cursus odio viverra non, sapien, sed.</p>
+                    <img src="images/heart.svg" class="heartImage" alt="">
+                </div>
+                <div class="advantageTile decorativeWrapper">
+                    <h4 class="advantageTitle">Dostęp do specjalistów
+                        <span class="withDecoration"><span>w jednym miejscu. </span><img src="images/textDecoration.svg" alt="" /></span>
+                    </h4>
+                    <p class="advantageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper massa pulvinar non
+                        cursus odio viverra non, sapien, sed.</p>
+                    <img src="images/gear.svg" class="gearImage" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="useKnowledge">
+            <div class="container">
+                <div class="wrapper">
+                    <h2>Skorzystaj z wiedzy i doświadczenia specjalistów i uniknij błędów przy wdrożeniu.</h2>
+                    <button class="primaryButton">
+                        <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
+                        Wykonaj test UX
+                    </button>
+                </div>
+            </div>
+        </section>
         <script src="js/script.js"></script>
     </body>
 </html>
