Add haveQuestions section

--- a/index.html
+++ b/index.html
@@ -325,17 +325,39 @@
                 </div>
             </div>
         </section>
-        <section class="useKnowledge">
-            <div class="container">
-                <div class="wrapper">
-                    <h2>Skorzystaj z wiedzy i doświadczenia specjalistów i uniknij błędów przy wdrożeniu.</h2>
-                    <button class="primaryButton">
-                        <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
-                        Wykonaj test UX
+        <div class="sectionsRelativeWrapper">
+            <section class="useKnowledge">
+                <div class="container">
+                    <div class="wrapper">
+                        <h2>Skorzystaj z wiedzy i doświadczenia specjalistów i uniknij błędów przy wdrożeniu.</h2>
+                        <button class="primaryButton">
+                            <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
+                            Wykonaj test UX
+                        </button>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="haveQuestions">
+                <div class="container">
+                    <h1 class="heading">Masz pytania?</h1>
+                    <h3 class="subheading">Umów się na 30 minutową sesję z UX testerem.</h3>
+                    <div class="uxTester">
+                        <img src="images/uxTesterPhoto.jpg" alt="">
+                        <div class="content">
+                            <h2 class="name">Imię Nazwisko</h2>
+                            <p class="position">Senior UX tester</p>
+                            <p class="email">pomoc@uxirl.pl</p>
+                        </div>
+                    </div>
+                    <button class="secondaryButton">
+                        <img class="buttonIcon" src="images/calendarIcon.svg" alt="" />
+                        Zarezerwuj spotkanie w Calendly
                     </button>
                 </div>
-            </div>
-        </section>
+            </section>
+            <img src="images/documents-2.svg" class="drawing" alt="">
+        </div>
         <script src="js/script.js"></script>
     </body>
 </html>
