--- a/index.html
+++ b/index.html
@@ -358,6 +358,18 @@
             </section>
             <img src="images/documents-2.svg" class="drawing" alt="">
         </div>
+        <footer class="footer">
+            <div class="container">
+                <p class="footerText">Made with love by</p>
+                <img src="images/logo.svg" alt="logo">
+                <div class="footerLinks">
+                    <p>©2021 UXirl. All rights reserved</p>
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms of Service</a>
+                    <a href="#">Security</a>
+                </div>
+            </div>
+        </footer>
         <script src="js/script.js"></script>
     </body>
 </html>
