--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="progressBar"></div>
             </nav>
             <div class="hero">
                 <div class="container">
