Create info subpage

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <nav class="navbar">
                 <div class="navbarContainer">
                     <div class="menu">
-                        <a href="#" class="logoLink">
+                        <a href="/" class="logoLink">
                             <div class="logo">
                                 uxirl.pl
                             </div>
                         </a>
                         <div class="menuLinks">
-                            <a href="#" class="menuLink">Czy to dla mnie?</a>
-                            <a href="#" class="menuLink">Jak wygląda badanie?</a>
-                            <a href="#steps" class="menuLink">Koszt badania</a>
-                            <a href="#help" class="menuLink">
+                            <a href="/info/#czy-to-dla-mnie" class="menuLink">Czy to dla mnie?</a>
+                            <a href="/info/#jak-wyglada-badanie" class="menuLink">Jak wygląda badanie?</a>
+                            <a href="/#wykonaj-test" class="menuLink">Koszt badania</a>
+                            <a href="#pomoc" class="menuLink">
                                 <button class="secondaryButton">Pomoc</button>
                             </a>
-                            <a href="#steps" class="menuLink">
+                            <a href="/#wykonaj-test" class="menuLink">
                                 <button class="primaryButton">
                                     <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
                                     Wykonaj test UX
@@ -209,7 +209,7 @@
                 </div>
             </div>
         </section>
-        <section class="steps" id="steps">
+        <section class="steps" id="wykonaj-test">
             <form action="/action_page.php" method="post" id="form1">
                 <div class="smallContainer decorativeWrapper">
                     <div class="headingWrapper visible">
@@ -392,7 +392,7 @@
                 </div>
             </section>
             
-            <section class="haveQuestions" id="help">
+            <section class="haveQuestions" id="pomoc">
                 <div class="container">
                     <h1 class="heading">Masz pytania?</h1>
                     <h3 class="subheading">Umów się na 30 minutową sesję z UX testerem.</h3>
